добавил модуль spollers

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,9 @@
 @import "icons";
 @import "settings";
 
+// Подключение UI компонентов
+// @import "./base/spollers";
+
 // подключения компонентов страницы
 @import "./components/header";
 
