добавил модуль табов

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -9,11 +9,6 @@
   box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
 html,
 body {
   height: 100%;
@@ -31,6 +26,16 @@ body {
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 .page {
