--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 
 // Подключение UI компонентов
 // @import "./base/spollers";
+// @import "./base/tabs";
 
 // подключения компонентов страницы
 @import "./components/header";
