Добавил модуль "показать еще"

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 // Подключение UI компонентов
 // @import "./base/spollers";
 // @import "./base/tabs";
+// @import "./base/showmore";
 
 // подключения компонентов страницы
 @import "./components/header";
